# GoQuant

./: CMakeLists.txt  LICENSE  README.md
docs/: api_endpoints.md  models.md  performance.md
include/data/: orderbook_processor.h  orderbook_types.h  websocket_client.h
include/models/: market_impact.h  simulator.h  transaction_cost.h
include/ui/: main_window.h
src/: main.cpp
src/data/: orderbook_processor.cpp  websocket_client.cpp
src/models/: market_impact.cpp  simulator.cpp  transaction_cost.cpp
src/ui/: main_window.cpp
